--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -27,6 +27,13 @@
   "tuto3": "Buradan mevcut etkinlikleri ekleyebilirsiniz.",
   "tuto4": "Buradan tekrarlanan etkinlik oluşturabilirsiniz.",
   "tuto5": "Bu hafta ve gelecek haftada için buradan birden fazla gün seçebilirsiniz.",
-  "tuto6": "Bu liste kaydırılabilir."
+  "tuto6": "Bu liste kaydırılabilir.",
+
+  "onboarding1": "Basit bir hafta planlayıcısı.",
+  "onboarding2": "Haftanızı genel olarak gözden geçirin ve zamanınızı etkili bir şekilde yönetin.",
+  "onboarding3": "Boş zamanlarınızın farkında olun.",
+  "onboarding4": "Aşırı özelliklere ihtiyacınız yok. \nDetaylı yönetim, hatırlatıcılar, aylık görünüm, yarım saat hassasiyetinden fazla zaman seçimi yok.",
+  "theme" : "Temayı değiştir.",
+  "letsStart" : "Hadi Başlayalım!"
 
 }
