--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -26,7 +26,7 @@
   "tuto2": "Buradan etkinlik ekleyebilirsiniz.\n(Önce atamak istediğiniz takvim hücresine dokunun)",
   "tuto3": "Buradan mevcut etkinlikleri ekleyebilirsiniz.",
   "tuto4": "Buradan tekrarlanan etkinlik oluşturabilirsiniz.",
-  "tuto5": "Bu hafta ve gelecek haftada için buradan birden fazla gün seçebilirsiniz.",
+  "tuto5": "Bu hafta ve gelecek hafta için buradan birden fazla gün seçebilirsiniz.",
   "tuto6": "Bu liste kaydırılabilir.",
 
   "onboarding1": "Basit bir hafta planlayıcısı.",
