--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -34,5 +34,7 @@
   "onboarding3": "注意您的空闲时间。",
   "onboarding4": "您无需繁琐的功能。\n没有微观管理，没有提醒，没有月视图，没有超过半小时准确度的时间选择。",
   "theme": "更改主题",
-  "letsStart": "让我们开始"
+  "letsStart": "让我们开始",
+
+  "languages" : "语言"
 }
