--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -43,5 +43,18 @@
   "deleteEvents" : "Delete All Events",
   "about" : "About",
 
-  "languages" : "Languages"
+  "languages" : "Languages",
+
+   "january": "January",
+   "february": "February",
+   "march": "March",
+   "april": "April",
+   "may": "May",
+   "june": "June",
+   "july": "July",
+   "august": "August",
+   "september": "September",
+   "october": "October",
+   "november": "November",
+   "december": "December"
 }
