--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -42,5 +42,18 @@
   "deleteEvents": "Eliminar todos los eventos",
   "about": "Acerca de",
 
-  "languages" : "Idiomas"
+  "languages" : "Idiomas",
+
+  "january": "Enero",
+      "february": "Febrero",
+      "march": "Marzo",
+      "april": "Abril",
+      "may": "Mayo",
+      "june": "Junio",
+      "july": "Julio",
+      "august": "Agosto",
+      "september": "Septiembre",
+      "october": "Octubre",
+      "november": "Noviembre",
+      "december": "Diciembre"
 }
