--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -42,6 +42,19 @@
   "deleteEvents": "Tüm Etkinlikleri Sil",
   "about": "Hakkında",
 
-  "languages" : "Diller"
+  "languages" : "Diller",
+
+    "january": "Ocak",
+    "february": "Şubat",
+    "march": "Mart",
+    "april": "Nisan",
+    "may": "Mayıs",
+    "june": "Haziran",
+    "july": "Temmuz",
+    "august": "Ağustos",
+    "september": "Eylül",
+    "october": "Ekim",
+    "november": "Kasım",
+    "december": "Aralık"
 
 }
