--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -42,5 +42,18 @@
   "deleteEvents": "删除所有事件",
   "about": "关于",
 
-  "languages" : "语言"
+  "languages" : "语言",
+
+  "january": "一月",
+    "february": "二月",
+    "march": "三月",
+    "april": "四月",
+    "may": "五月",
+    "june": "六月",
+    "july": "七月",
+    "august": "八月",
+    "september": "九月",
+    "october": "十月",
+    "november": "十一月",
+    "december": "十二月"
 }
