--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,6 +16,8 @@
   "hoursCapital" : "HOURS",
   "minutesCapital" : "MINUTES",
   "today" : "Today",
+  "from" : "FROM",
+  "to" : "TO",
 
   "must" : "MUST",
   "daily" : "DAILY",
