--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -15,6 +15,9 @@
   "hoursCapital" : "HORAS",
   "minutesCapital" : "MINUTOS",
   "today" : "Hoy",
+  "from": "DE",
+  "to": "A",
+
 
   "must" : "DEBE",
   "daily" : "DIARIO",
