--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -15,6 +15,8 @@
   "hoursCapital": "ЧАСОВ",
   "minutesCapital": "МИНУТ",
   "today": "Сегодня",
+  "from": "От",
+  "to": "До",
   "must": "ДОЛЖЕН",
   "daily": "ЕЖЕДНЕВНЫЙ",
   "social": "СОЦИАЛЬНЫЙ",
