--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -15,6 +15,8 @@
   "hoursCapital" : "SAAT",
   "minutesCapital" : "DAKİKA",
   "today" : "Bugün",
+  "from": "BAŞLANGIÇ",
+  "to": "BİTİŞ",
 
   "must" : "MUTLAK",
   "daily" : "GÜNLÜK",
