--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -15,6 +15,8 @@
   "hoursCapital": "小时",
   "minutesCapital": "分钟",
   "today": "今天",
+  "from": "从",
+  "to": "到",
 
   "must": "必须",
   "daily": "每日",
