--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -57,5 +57,8 @@
     "september": "九月",
     "october": "十月",
     "november": "十一月",
-    "december": "十二月"
+    "december": "十二月",
+
+    "removeAds" : "移除广告",
+    "description" : "使用 Strong Week 无广告。"
 }
