--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -51,5 +51,8 @@
   "september": "Setembro",
   "october": "Outubro",
   "november": "Novembro",
-  "december": "Dezembro"
+  "december": "Dezembro",
+
+  "removeAds" : "Remover anúncios",
+  "description" : "Use o Strong Week sem anúncios."
 }
