--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -58,5 +58,21 @@
   "description" : "Используйте Strong Week без рекламы.",
 
   "onlyDeleteThisDay": "Удалить только с этого дня",
-  "deleteCompletely": "Полностью удалить это повторяющееся событие"
+  "deleteCompletely": "Полностью удалить это повторяющееся событие",
+
+  "mustActivity": "У вас есть обязательная деятельность, которая занимает большую часть вашего времени в течение недели и повторяется в одно и то же время?",
+  "suchAs": "КАК НАПРИМЕР",
+  "multipleDaysForThisEvent": "После определения его времени и продолжительности, вы можете легко выбрать несколько дней для этого события ниже.",
+  "continuee": "ПРОДОЛЖИТЬ",
+  "continueTo": "ПРОДОЛЖИТЬ К КАЛЕНДАРЮ",
+  "work": "Работа",
+     "school": "Школа",
+
+  "monday": "Пн",
+    "tuesday": "Вт",
+    "wednesday": "Ср",
+    "thursday": "Чт",
+    "friday": "Пт",
+    "saturday": "Сб",
+    "sunday": "Вс"
 }
