--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -63,5 +63,23 @@
     "description" : "使用 Strong Week 无广告。",
 
     "onlyDeleteThisDay": "仅从当天删除",
-    "deleteCompletely": "彻底删除此重复事件"
+    "deleteCompletely": "彻底删除此重复事件",
+
+    "mustActivity": "您是否有一项必须活动，在一周中占用大部分时间，并且在同一时间重复？",
+       "suchAs": "例如",
+    "multipleDaysForThisEvent": "在定义了事件的时间和持续时间之后，您可以在下方轻松选择多个日期。",
+       "continuee": "继续",
+       "continueTo": "继续到日历",
+       "work": "工作",
+         "school": "学校",
+
+    "monday": "周一",
+      "tuesday": "周二",
+      "wednesday": "周三",
+      "thursday": "周四",
+      "friday": "周五",
+      "saturday": "周六",
+      "sunday": "周日"
+
+
 }
